Fixed spacing for Release Title on ReleasePreview

--- a/src/containers/ReleasePreview/index.css
+++ b/src/containers/ReleasePreview/index.css
@@ -9,6 +9,7 @@
 
 .releasePreview .releaseHeadline{
     /* border-bottom: solid #ffcebe; */
+    margin-top: 2vh;
     margin-bottom: 1.5vh;
     width: 100%;
 }
